--- a/app/src/main/res/layout/fragment_tab_personaje.xml
+++ b/app/src/main/res/layout/fragment_tab_personaje.xml
@@ -51,7 +51,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="/"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/pbVida_JP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +98,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="/"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/pbEnergia_JP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -159,7 +157,7 @@
 
     <EditText
         android:id="@+id/etRecuperar_JP"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:ems="10"
