--- a/app/src/main/res/layout/item_inv_arma.xml
+++ b/app/src/main/res/layout/item_inv_arma.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp" >
+    android:padding="5dp" >
 
     <TextView
-        android:id="@+id/textArma"
+        android:id="@+id/tvCategoria_InvArma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Arma: "
+        android:text="[Categoria]: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="[nombre]"
-        app:layout_constraintBottom_toBottomOf="@+id/textArma"
-        app:layout_constraintStart_toEndOf="@+id/textArma" />
+        app:layout_constraintBottom_toBottomOf="@+id/tvCategoria_InvArma"
+        app:layout_constraintStart_toEndOf="@+id/tvCategoria_InvArma" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
