--- a/app/src/main/res/layout/fragment_tab_item.xml
+++ b/app/src/main/res/layout/fragment_tab_item.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="24dp"
         android:text="[personaje]"
         android:textAlignment="center"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,10 +49,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textVida" />
 
     <TextView
-        android:id="@+id/tvVidaT_JP"
+        android:id="@+id/tvVidaMax_JP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="[vidaTop]"
+        android:text="[vidaMax]"
         app:layout_constraintBottom_toBottomOf="@+id/textDash1"
         app:layout_constraintStart_toEndOf="@+id/textDash1" />
 
@@ -83,10 +85,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textEnergia" />
 
     <TextView
-        android:id="@+id/tvEnergiaT_JP"
+        android:id="@+id/tvEnergiaMax_JP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="[energiaTop]"
+        android:text="[energiaMax]"
         app:layout_constraintBottom_toBottomOf="@+id/textDash3"
         app:layout_constraintStart_toEndOf="@+id/textDash3" />
 
